# SistemaDomotico

./: CMakeLists.txt  Log - 2025.01.10 15h27m.txt  Log - 2025.01.10 15h54m.txt  README.md  devices.txt
include/: Auto.h  Clock.h  Device.h  House.h  Id.h  Manual.h
src/: Auto.cpp  Clock.cpp  Device.cpp  House.cpp  Id.cpp  Log - 2025.01.07 10hh13mm.txt  Log - 2025.01.07 10hh22mm.txt  Manual.cpp  main.cpp
